<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".features.transliteration.TransliterationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="@dimen/large_padding">

        <com.google.android.material.chip.Chip
            android:id="@+id/source_alphabet_text"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:padding="@dimen/large_padding"
            android:layout_marginEnd="@dimen/large_padding"
            style="@style/Widget.Material3.Chip.Suggestion.Elevated"
            app:chipStrokeWidth="0dp"
            android:clickable="false"
            android:textAlignment="center"
            tools:text="@string/transliteration_screen_cyrillic"/>

        <ImageButton
            android:background="?selectableItemBackgroundBorderless"
            android:id="@+id/transliteration_change_direction_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/sync_alt"
            android:contentDescription="@string/transliteration_screen_change_direction" />

        <com.google.android.material.chip.Chip
            android:id="@+id/target_alphabet_text"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/large_padding"
            android:padding="@dimen/large_padding"
            android:clickable="false"
            style="@style/Widget.Material3.Chip.Suggestion.Elevated"
            app:chipStrokeWidth="0dp"
            android:textAlignment="center"
            tools:text="@string/transliteration_screen_latin"/>

    </LinearLayout>

    <EditText
        android:id="@+id/transliteration_source_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top|start"
        android:hint="@string/text_hint"
        android:inputType="textMultiLine"
        android:padding="@dimen/large_padding"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:autofillHints="" />

    <EditText
        android:id="@+id/transliteration_target_text"
        android:enabled="false"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top|start"
        android:padding="@dimen/large_padding"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />


</LinearLayout>